nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: privateai
spec:
  selector:
    app: nginx-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
